k8s/overlays/dev-smoke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aquashield-dev
  labels:
    app.kubernetes.io/part-of: aquashield
    app.kubernetes.io/environment: dev
    istio-injection: enabled
