k8s/overlays/dev-smoke/default-deny-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  labels:
    app.kubernetes.io/part-of: aquashield
spec: {}
